--- a/Website/assets/mobirise/css/mbr-additional.css
+++ b/Website/assets/mobirise/css/mbr-additional.css
@@ -2202,7 +2202,7 @@ body {
   color: #767676;
 }
 .cid-rrMQiFfayr {
-  background-image: url("../../../assets/images/background3.jpg");
+  background-image: url("../../../assets/images/joy-700x500.jpg");
 }
 .cid-rrMQiFfayr h1 {
   color: #616161;
@@ -2214,6 +2214,9 @@ body {
 }
 .cid-rrMQiFfayr .mbr-section-subtitle {
   font-style: italic;
+}
+.cid-rrMQiFfayr H1 {
+  color: #232323;
 }
 .cid-rrMQlfmlq2 {
   padding-top: 60px;
@@ -2267,24 +2270,6 @@ body {
   }
 }
 .cid-rrMXjjeWs8 .mbr-text {
-  color: #767676;
-}
-.cid-rrMXkDYy1B {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-@media (min-width: 992px) {
-  .cid-rrMXkDYy1B .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-rrMXkDYy1B .mbr-figure {
-    padding-top: 1rem;
-  }
-}
-.cid-rrMXkDYy1B .mbr-text {
   color: #767676;
 }
 .cid-rrMYrP3NLg {
